--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ olefile==0.46
 pandas==1.3.3
 pycosat==0.6.3
 pymongo==3.12.0
+pyproj==3.2.1
 python-dotenv==0.19.0
 Shapely==1.7.1
 webdriver-manager==3.4.2
